# msyh.fm

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  package-lock.json  requirements.txt  setup.sh
backend/: Cargo.toml  requirements.txt
backend/migrations/2023-07-28-201353_users/: up.sql
backend/migrations/2023-09-26-192503_events/: up.sql
backend/msyhfm/: manage.py
backend/msyhfm/events/: models.py  serializers.py  urls.py  views.py
backend/msyhfm/events/migrations/: 0001_initial.py
backend/msyhfm/msyhfm/: asgi.py  settings.py  urls.py  wsgi.py
backend/msyhfm/team/: admin.py  models.py  serializers.py  urls.py  views.py
backend/msyhfm/team/migrations/: 0001_initial.py  0002_alter_team_options_team_social_media_links.py  0003_alter_team_social_media_links.py
backend/src/: actions.rs  main.rs  models.rs  schema.rs
dotfm/: asgi.py  settings.py  urls.py  wsgi.py
dotfm/web/: apps.py  views.py
frontend/: index.html  nuxt.config.ts  package-lock.json  package.json  tailwind.config.js
frontend-nuxt/: prettier.config.ts
frontend-nuxt/components/: ButtonButton.vue  ButtonLink.vue  NavBar.vue  TheFooter.vue
frontend-nuxt/layouts/: default.vue
frontend-nuxt/pages/: index.vue
frontend/components/: ButtonButton.vue  ContainerWrap.vue  TheFooter.vue
frontend/layouts/: default.vue  landing.vue
frontend/pages/: index.vue
frontend/plugins/: fontawesome.ts
frontend/src/: App.vue  main.js
msyhdotfm_website/: asgi.py  settings.py  urls.py  views.py  wsgi.py
requirements/: dev.txt  prod.txt
(+59 files in other folders)
